[project]
name = "zint"
version = "0.1.0"
description="A minimal example package (with pybind11)"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "typing-extensions >= 4.6.0",
]

[build-system]
requires = [
    "scikit-build-core >= 0.8.2",
    "pybind11 >= 2.12, < 3",
    # Build dependencies from CMake. Please keep this in sync with relevant requirements files.
    "pip >= 24",
    # src/zint/scripts/generate-enums.requirements.txt
    "clang-format >= 18",
    "varformat",
    # src/zint/scripts/generate-stub.requirements.txt
    "pybind11-stubgen",
    "numpy",
    "typing-extensions >= 4.6",
    "black >= 24"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "src/zint"
cmake.targets = ["zint_bindings"]
install.components = ["zint_bindings"]

cmake.version = ">=3.28"
ninja.version = ">=1.11"
ninja.make-fallback = false

[tool.cibuildwheel]
skip = "*linux_i686* *linux_ppc64le* *linux_s390x* *-win32"
environment = {CMAKE_GENERATOR="Ninja"}  # Force Ninja even on Windows

# Hardcode manylinux2014 as the target because tool.cibuildwheel.linux uses yum to install packages.
manylinux-x86_64-image       = "manylinux2014"
manylinux-aarch64-image      = "manylinux2014"
manylinux-pypy_x86_64-image  = "manylinux2014"
manylinux-pypy_aarch64-image = "manylinux2014"

musllinux-x86_64-image  = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

test-requires = "pytest>=7 pytest-sugar"
test-command = "pytest {project}"

[tool.cibuildwheel.linux]
before-all = "yum install -y curl zip unzip tar"  # For bootstrapping vcpkg

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add build-base cmake ninja zip unzip curl git"
environment = {VCPKG_FORCE_SYSTEM_BINARIES="1"}

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring, too-many-arguments, too-many-locals"
max-line-length = 120

[tool.black]
line-length = 120
